feat: 完成 Java11 兼容与部署优化
统一后端到 Java11/Spring Boot 2.7 兼容，补充前端页面与品牌组件并清理线上可见调试文案，完善 CentOS7 部署与 AI 接口配置。

Made-with: Cursor